check_errors.txt
    Checking rh-cql v0.1.0 (/Users/bkaney/projects/rh/crates/rh-cql)
error[E0422]: cannot find struct, variant or union type `TypedQuery` in this scope
   --> crates/rh-cql/src/semantics/analyzer.rs:553:44
    |
553 |         let inner = TypedExpression::Query(TypedQuery {
    |                                            ^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
  1 + use crate::semantics::typed_ast::TypedQuery;
    |

error[E0422]: cannot find struct, variant or union type `AliasedQuerySource` in module `ast`
   --> crates/rh-cql/src/semantics/analyzer.rs:557:39
    |
557 |                     sources.push(ast::AliasedQuerySource {
    |                                       ^^^^^^^^^^^^^^^^^^ not found in `ast`
    |
help: consider importing this struct through its public re-export
    |
  1 + use crate::elm::AliasedQuerySource;
    |
help: if you import `AliasedQuerySource`, refer to it directly
    |
557 -                     sources.push(ast::AliasedQuerySource {
557 +                     sources.push(AliasedQuerySource {
    |

error[E0423]: expected function, tuple struct or tuple variant, found struct `ast::QuerySource`
   --> crates/rh-cql/src/semantics/analyzer.rs:565:22
    |
565 |                   Some(ast::QuerySource(sources))
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^ help: use struct literal syntax instead: `ast::QuerySource { expression: val, alias: val, location: val }`
    |
   ::: crates/rh-cql/src/parser/ast.rs:739:1
    |
739 | / pub struct QuerySource {
740 | |     /// Source expression
741 | |     pub expression: Box<Expression>,
742 | |     /// Alias
...   |
745 | |     pub location: Option<SourceLocation>,
746 | | }
    | |_- `ast::QuerySource` defined here

error[E0422]: cannot find struct, variant or union type `TypedRetrieve` in this scope
   --> crates/rh-cql/src/semantics/analyzer.rs:594:47
    |
594 |         let inner = TypedExpression::Retrieve(TypedRetrieve {
    |                                               ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
  1 + use crate::semantics::typed_ast::TypedRetrieve;
    |

error[E0422]: cannot find struct, variant or union type `TypedCaseItem` in this scope
   --> crates/rh-cql/src/semantics/analyzer.rs:657:24
    |
657 |             items.push(TypedCaseItem {
    |                        ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
  1 + use crate::semantics::typed_ast::TypedCaseItem;
    |

error[E0422]: cannot find struct, variant or union type `TypedCase` in this scope
   --> crates/rh-cql/src/semantics/analyzer.rs:665:43
    |
665 |         let inner = TypedExpression::Case(TypedCase {
    |                                           ^^^^^^^^^
    |
   ::: crates/rh-cql/src/semantics/typed_ast.rs:38:1
    |
 38 | pub struct TypedNode<T> {
    | ----------------------- similarly named struct `TypedNode` defined here
    |
help: a struct with a similar name exists
    |
665 -         let inner = TypedExpression::Case(TypedCase {
665 +         let inner = TypedExpression::Case(TypedNode {
    |
help: consider importing this struct
    |
  1 + use crate::semantics::typed_ast::TypedCase;
    |

error[E0422]: cannot find struct, variant or union type `TypedIntervalExpression` in this scope
   --> crates/rh-cql/src/semantics/analyzer.rs:703:57
    |
703 |         let inner = TypedExpression::IntervalExpression(TypedIntervalExpression {
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
  1 + use crate::semantics::typed_ast::TypedIntervalExpression;
    |

error[E0609]: no field `source` on type `&ast::Query`
   --> crates/rh-cql/src/semantics/analyzer.rs:554:41
    |
554 |             source: if let Some(s) = &e.source {
    |                                         ^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
554 |             source: if let Some(s) = &e.sources {
    |                                               +

error[E0609]: no field `template_id` on type `&ast::Retrieve`
   --> crates/rh-cql/src/semantics/analyzer.rs:596:28
    |
596 |             template_id: e.template_id.clone(),
    |                            ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `data_type`, `context`, `code_path`, `codes`, `date_path` ... and 2 others

error[E0609]: no field `code_property` on type `&ast::Retrieve`
   --> crates/rh-cql/src/semantics/analyzer.rs:599:30
    |
599 |             code_property: e.code_property.clone(),
    |                              ^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `data_type`, `context`, `code_path`, `codes`, `date_path` ... and 2 others

error[E0609]: no field `date_property` on type `&ast::Retrieve`
   --> crates/rh-cql/src/semantics/analyzer.rs:601:30
    |
601 |             date_property: e.date_property.clone(),
    |                              ^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `data_type`, `context`, `code_path`, `codes`, `date_path` ... and 2 others

error[E0609]: no field `id_property` on type `&ast::Retrieve`
   --> crates/rh-cql/src/semantics/analyzer.rs:603:28
    |
603 |             id_property: e.id_property.clone(),
    |                            ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `data_type`, `context`, `code_path`, `codes`, `date_path` ... and 2 others

error[E0609]: no field `inclusion_elements` on type `&ast::Retrieve`
   --> crates/rh-cql/src/semantics/analyzer.rs:608:35
    |
608 |             inclusion_elements: e.inclusion_elements.clone(),
    |                                   ^^^^^^^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `data_type`, `context`, `code_path`, `codes`, `date_path` ... and 2 others

Some errors have detailed explanations: E0422, E0423, E0609.
For more information about an error, try `rustc --explain E0422`.
error: could not compile `rh-cql` (lib) due to 13 previous errors
